syntax = "proto3";
import "com/glance/analytics/spaces/client/api/zapp_content.proto";
import "com/glance/analytics/spaces/client/api/element_location.proto";
import "com/glance/analytics/spaces/client/api/interaction.proto";
import "com/glance/analytics/spaces/client/api/render_event.proto";
import "com/glance/analytics/spaces/client/api/deprecated_bc2.proto";

option java_multiple_files = true;
option java_package = "com.glance.analytics.spaces.client.api";

package com.glance.analytics.spaces.client.api;

message EngagementEvent {
  option deprecated = true;
  Interaction interaction = 2;
  TargetContentElement target_element = 3;
  ElementLocation element_location = 4;
}